--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "^15.3.3",
+    "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
@@ -32,6 +33,7 @@
     "react-sticky-el": "^2.1.1",
     "react-toastify": "^11.0.3",
     "reactstrap": "^9.2.3",
+    "rxjs": "^7.8.2",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
