--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.13.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "next": "^15.3.3",
     "node-cron": "^4.1.0",
     "react": "^19.0.0",
@@ -34,7 +35,9 @@
     "react-toastify": "^11.0.3",
     "reactstrap": "^9.2.3",
     "rxjs": "^7.8.2",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "thumbor": "^0.1.5",
+    "thumbor-ts": "^1.3.91"
   },
   "devDependencies": {
     "@types/node": "^22",
